fix parsing the inventory
the JSON structure in the log file for the inventory is changed.
Use a json schema for the new structure.

I am currently to lazy to add Vanity stuff, which would also includes
card styles now.